--- a/PankisGPT.csproj
+++ b/PankisGPT.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.14.1" />
+      <PackageReference Include="DotNetEnv" Version="3.0.0" />
       <PackageReference Include="OpenAI" Version="1.11.0" />
     </ItemGroup>
 
